# music-normalizer

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
jobs.staging-subset/1214e17e1ae4/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/18c7f2eb3cd4/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/26ecfe9fbcf7/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/49705d5aa505/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/4de0ad3a5451/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/651d28cdb2a9/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/7a2c9d766d31/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/8fc3d3737f72/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/9e5515ad5145/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/b183b7479583/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/b4eb6cd64c3d/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/caca4b150b34/: manifest.json  review.csv  suggestions.json
jobs.staging-subset/d583c1b885c5/: manifest.json  review.csv  suggestions.json
tests/: conftest.py  test_album_corroboration.py  test_album_prefix.py  test_artist_casing.py  test_bulk.py  test_classifier.py  test_filename_fallback.py  test_probe.py  test_prompts.py  test_review_incremental.py  test_rules.py  test_symbolic_titles.py  test_tags.py  test_validator.py  test_validator_generic_cleanup.py  test_wav_to_flac_recovery.py
(+30 files in other folders)
